@@ -1,0 +1,3 @@
+MD5 83651d82ada4b06cfead5c535bcbdd6e wine-0.9.25.tar.bz2 11297723
+RMD160 7aa4317cf64f473a44fb7f9093cecf86ba022fd8 wine-0.9.25.tar.bz2 11297723
+SHA256 427d12210120cc7a8f297e2f42ee026bebc5931b9d477efd31f5bfc1cb5d5a5a wine-0.9.25.tar.bz2 11297723
