@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/wine
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.159 2006/10/28 23:44:17 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.160 2006/11/11 02:15:17 vapier Exp $
+
+*wine-0.9.25 (11 Nov 2006)
+
+  11 Nov 2006; Mike Frysinger <vapier@gentoo.org> +wine-0.9.25.ebuild:
+  Version bump.
 
 *wine-0.9.24 (28 Oct 2006)
 
